# Serverless-GPU

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dawn/: .gitignore  README.md  pyproject.toml
dawn/dawn/: __init__.py  cli.py
dawn/dawn/core/: __init__.py  checkpoint.py  compression.py  gpu.py  pageserver.py  process.py  shm.py
dawn/dawn/models/: __init__.py  result.py
dawn/dawn/setup/: __init__.py  installer.py  preflight.py
dawn/dawn/utils/: __init__.py  shell.py  timing.py
deploy/: ECR_SETUP.md
deploy/grafana/: serverlessgpu.json
deploy/helm/serverlessgpu/: Chart.yaml  README.md  overview.md  values-prod.example.yaml  values.yaml
deploy/helm/serverlessgpu/templates/: _helpers.tpl  gateway.yaml  ingress.yaml  postgres.yaml  redis.yaml  secret.yaml  servicemonitor.yaml  web.yaml
docs/: ARCHITECTURE.md  DEPLOY.md  OPERATIONS.md
gateway/: .env.example  Dockerfile  pyproject.toml
gateway/gateway/: audit.py  auth.py  autoscaler.py  bench.py  bench_remote_wrapper.py  compute.py  crypto.py  db.py  inference.py  inference_planner.py  inference_reconciler.py  main.py  metrics.py  pi_provider.py  provider.py  providers_api.py  pyremote_shim.py  reconciler.py  runpod_provider.py  vm_probe.py
sdk/: pyproject.toml
sdk/examples/: qwen.py
sdk/serverlessgpu/: __init__.py  cli.py  decorators.py
tests/: conftest.py  test_auth.py  test_health.py  test_lifecycle.py  test_metrics.py  test_openai_compat.py  test_pi_provider.py  test_pi_validation.py  test_reconciler.py  test_streaming.py
web/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json
web/public/tokens/: design-tokens.json  variables.css
web/src/: proxy.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(app)/: layout.tsx
web/src/app/(app)/admin/audit/: audit-list.tsx  page.tsx
web/src/app/(app)/admin/compute-approvals/: approvals-list.tsx  page.tsx
web/src/app/(app)/admin/provisioned/: page.tsx  provisioned-list.tsx
web/src/app/(app)/admin/roles/: page.tsx  roles-manager.tsx
web/src/app/(app)/api-keys/: api-key-panel.tsx  page.tsx
web/src/app/(app)/benchmark/: benchmark-list.tsx  benchmark-row.tsx  dashboard.tsx  explorer.tsx  page.tsx
web/src/app/(app)/benchmark/[id]/: benchmark-detail.tsx
web/src/app/(app)/benchmark/new/: benchmark-form.tsx  page.tsx
web/src/app/(app)/compute/: compute-list.tsx  page.tsx
web/src/app/(app)/compute/[id]/: page.tsx  pod-detail.tsx
web/src/app/(app)/compute/new/: new-pod-form.tsx  page.tsx
web/src/app/(app)/organization/: page.tsx  table.tsx
web/src/app/(app)/providers/: page.tsx  providers-list.tsx
web/src/app/(app)/providers/new/: page.tsx  (+1 more)
web/src/app/(app)/serverless/: actions.ts  endpoint-grid.tsx  page.tsx
web/src/app/(app)/settings/: appearance.tsx  page.tsx  profile-form.tsx
web/src/app/(auth)/: layout.tsx
web/src/app/(auth)/login/: github-sso-button.tsx  login-form.tsx  page.tsx
web/src/app/(auth)/register/: page.tsx  register-form.tsx
web/src/app/landing/: page.tsx
web/src/components/: availability-badge.tsx  burn-flame.tsx  hero-cycler.tsx  landing-dots.tsx  no-access-alert.tsx  terminal-theme-init.tsx  typewriter.tsx
web/src/components/console/: sidebar-state.tsx  sidebar.tsx  theme-toggle.tsx  topbar.tsx  user-menu.tsx
web/src/components/ui/: code-preview.tsx  number-field.tsx  searchable-select.tsx
web/src/lib/: animations.ts  auth-cookie.ts  avatar.ts  cost.ts  current-user.ts  gateway.ts  gpu-format.ts  hub-catalog.ts  me.ts  terminal-theme.ts  types.ts  use-gpu-availability.ts
worker-agent/: Dockerfile  Dockerfile.inference  Dockerfile.pi  entrypoint-inference.sh  entrypoint-pi.sh  pyproject.toml
worker-agent/worker_agent/: main.py
(+26 files in other folders)
