[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dawn"
version = "0.1.0"
description = "Checkpoint/restore tool for serverless GPU inference (CRIU + cuda-checkpoint wrapper)"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.5",
    "rich>=13.7",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[project.scripts]
dawn = "dawn.cli:app"

[tool.setuptools.packages.find]
include = ["dawn*"]
