[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "serverlessgpu"
version = "0.1.0"
description = "Python SDK + CLI for the Serverless-GPU platform"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.7",
    "pydantic>=2.5",
]

[project.scripts]
serverlessgpu = "serverlessgpu.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["serverlessgpu*"]
