[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worker-agent"
version = "0.1.0"
description = "Serverless-GPU worker agent (BRPOPs job queue, dispatches to vLLM or fake handler)"
requires-python = ">=3.10"
dependencies = [
    "redis>=5.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
worker-agent = "worker_agent.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["worker_agent*"]
